# easy-performance-analyzer

./: .gitignore  CMakeLists.txt  README.md
cmake/: android.toolchain.cmake
samples/: CMakeLists.txt  README.md
samples/src/: compiler-optimization.cpp  external-control.cpp  instrumentation-performance.cpp  multithreaded.cpp  offline.cpp  real-time.cpp
src/: EasyProfiler.cpp  EasyProfiler.hpp  ezp.cpp  ezp.hpp  ezp_control.cpp
